@@ -372,19 +372,20 @@ public class TestRunner
       listenerClasses.addAll(listenerHolder.getListenerClasses());
     }
 
-    if (listenerFactoryClass == null) {
-      listenerFactoryClass = DefaultListenerFactory.class;
-    }
-
     //
     // Now we have all the listeners collected from @Listeners and at most one
     // listener factory collected from a class implementing ITestNGListenerFactory.
     // Instantiate all the requested listeners.
     //
 
-    ITestNGListenerFactory factory =
-        Optional.ofNullable(m_configuration.getListenerFactory())
-            .orElse(new DefaultListenerFactory(m_objectFactory, this));
+    ITestNGListenerFactory factory;
+    if (listenerFactoryClass != null) {
+      factory = m_objectFactory.newInstance(listenerFactoryClass);
+    } else {
+      factory =
+          Optional.ofNullable(m_configuration.getListenerFactory())
+              .orElse(new DefaultListenerFactory(m_objectFactory, this));
+    }
 
     // Instantiate all the listeners
     for (Class<? extends ITestNGListener> c : listenerClasses) {
